# Avater_Teleoperation

./: CMakeLists.txt  README.md  config.h.cmake
common/: CMakeLists.txt
common/include/ControlParameters/: RobotParameters.h
common/include/Controllers/: DesiredStateCommand.h  LegController.h  StateEstimatorContainer.h
common/include/Dynamics/: ActuatorModel.h  MiniCheetah.h  MiniCheetah_.h
common/include/SimUtilities/: SimulatorMessage.h  SpineBoard.h
common/include/Utilities/: PeriodicTask.h
common/src/Collision/: ContactSpringDamper.cpp
common/src/Controllers/: DesiredStateCommand.cpp  GaitScheduler.cpp  LegController.cpp  PositionVelocityEstimator.cpp
common/src/Utilities/: PeriodicTask.cpp
config/: default-terrain.yaml  initial_jpos_ctrl.yaml  mini-cheetah-defaults.yaml  simulator-defaults.yaml
lcm-types/: BP4_NN_IO_t.lcm  NN_IO_t.lcm  command_phase_lcmt.lcm  contact_t.lcm  core_t.lcm  file_list.txt  state_estimator_lcmt.lcm
lcm-types/cpp/: BP4_NN_IO_t.hpp  NN_IO_t.hpp  command_phase_lcmt.hpp  contact_t.hpp  core_t.hpp  gui_main_control_settings_t.hpp  state_estimator_lcmt.hpp  wbc_test_data_t.hpp
lcm-types/lcmtypes/: BP4_NN_IO_t.java  NN_IO_t.java  command_phase_lcmt.java  contact_t.java  core_t.java  state_estimator_lcmt.java
lcm-types/python/: BP4_NN_IO_t.py  NN_IO_t.py  command_phase_lcmt.py  contact_t.py  core_t.py  gui_main_control_settings_t.py  state_estimator_lcmt.py  wbc_test_data_t.py
mc_build/: CMakeCache.txt  Configuration.h  Makefile  cmake_install.cmake
mc_build/common/: Makefile  cmake_install.cmake
mc_build/robot/: Makefile  cmake_install.cmake
mc_build/robot-software/config/: default-user.yaml
mc_build/robot-software/robot/: CMakeLists.txt
mc_build/robot-software/robot/include/: RobotController.h  RobotRunner.h  SimulationBridge.h
mc_build/robot-software/robot/include/rt/: MedianFilter.h  rt_rc_interface.h  rt_serial.h
mc_build/robot-software/robot/src/: HardwareBridge.cpp  RobotRunner.cpp  main_helper.cpp
mc_build/robot-software/robot/src/rt/: MedianFilter.c  rt_interface_lcm.cpp  rt_sbus.cpp  rt_serial.cpp  rt_spi.cpp
mc_build/sim/: Makefile  cmake_install.cmake  ui_SimControlPanel.h
mc_build/sim/include/: moc_GameController.cpp  moc_GameController.cpp_parameters  moc_Graphics3D.cpp  moc_Graphics3D.cpp_parameters  moc_SimControlPanel.cpp  moc_SimControlPanel.cpp_parameters
mc_build/user/: Makefile  cmake_install.cmake
mc_build/user/Tele_Controller/: Makefile  cmake_install.cmake  tele_ctrl
resources/: install-cp210x-0.2.sh
resources/other/: mini_body.STL
resources/other/3d_bp5/: ABAD2HIP.STL  bp_body.STL
resources/tf_mini/tf_arduino/tf/: tf.ino
robot/include/: HardwareBridge.h
robot/include/rt/: rt_interface_lcm.h  rt_sbus.h  rt_spi.h
robot/src/: JPosInitializer.cpp  SimulationBridge.cpp
robot/src/rt/: rt_rc_interface.cpp
scripts/: BP4_NN_IO_t.py  NN_IO_t.py  _PWD_TEMP_  config_network_lcm.sh  find_qt_path.sh  footpad_test.py  record.py  run_mc.sh  run_mc2.sh  run_mc_auto.sh  send_to_mini_cheetah.sh
scripts/lcmlog2smat/: log_to_smat.py
sim/: CMakeLists.txt
sim/src/: DrawList.cpp  RobotInterface.cpp  SimControlPanel.cpp  Simulation.cpp
user/: CMakeLists.txt
user/Tele_Controller/: CMakeLists.txt  Tele_Controller.cpp  Tele_Controller.hpp  Tele_UserParameters.h  main.cpp
